@@ -2,6 +2,8 @@
 
 	* seek.c (CopyFile): No special file mode handling for Cygwin.
 
+	* seetexk.test: Add tests of dvibook and dvitodvi reading stdin.
+
 2012-03-20  Karl Berry  <karl@tug.org>
 
 	* *.c, *.h, *.man: update license of UMD files to use the X11
